# docker-haskell

./: LICENSE  README.md  build.sh  shell.sh  test.sh
example/: Dockerfile
example/app/: LICENSE  app.cabal
example/app/src/: Main.hs
haskell/: Dockerfile
