name:                app
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable app
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010
